Retry push with local GIFs (fixed typo)

--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@ html
             text-shadow: 2px 2px 8px #ff00ff, -2px -2px 8px #00ffff;
             margin: 0;
         }
-        /* Rotating Hedgehogs */
         .hedgehog {
             position: absolute;
             width: 100px;
@@ -49,7 +48,6 @@ html
         @keyframes spin {
             100% { transform: rotate(360deg); }
         }
-        /* Flashy Smileys */
         .smiley {
             position: absolute;
             width: 80px;
@@ -63,7 +61,6 @@ html
         @keyframes flash {
             50% { opacity: 0; }
         }
-        /* Shining Sun with Sunglasses */
         .sun {
             position: absolute;
             top: 10px;
@@ -76,7 +73,6 @@ html
             0%, 100% { transform: scale(1); opacity: 1; }
             50% { transform: scale(1.1); opacity: 0.8; }
         }
-        /* Bursting Confetti */
         .confetti {
             position: absolute;
             width: 10px;
@@ -108,15 +104,15 @@ html
     <div class="container">
         <h1>HELLO CHRIS, THANKS FOR GIVING ME THE TASK.<br>THIS IS MY FIRST WESITE USING GIT HUB!<br>AND THANK YOU TO GROK TOO!!!</h1>
     </div>
-    <img src="https://media.giphy.com/media/26BRv0vvGMmxx4pL2/giphy.gif" class="hedgehog" id="hedge1">
-    <img src="https://media.giphy.com/media/26BRv0vvGMmxx4pL2/giphy.gif" class="hedgehog" id="hedge2">
-    <img src="https://media.giphy.com/media/26BRv0vvGMmxx4pL2/giphy.gif" class="hedgehog" id="hedge3">
-    <img src="https://media.giphy.com/media/26BRv0vvGMmxx4pL2/giphy.gif" class="hedgehog" id="hedge4">
-    <img src="https://media.giphy.com/media/xT0GqrClDHK1pFZkZy/giphy.gif" class="smiley" id="smile1">
-    <img src="https://media.giphy.com/media/xT0GqrClDHK1pFZkZy/giphy.gif" class="smiley" id="smile2">
-    <img src="https://media.giphy.com/media/xT0GqrClDHK1pFZkZy/giphy.gif" class="smiley" id="smile3">
-    <img src="https://media.giphy.com/media/xT0GqrClDHK1pFZkZy/giphy.gif" class="smiley" id="smile4">
-    <img src="https://media.giphy.com/media/l0Iyau7QcKtKUYq36/giphy.gif" class="sun">
+    <img src="hedgehog.gif" class="hedgehog" id="hedge1">
+    <img src="hedgehog.gif" class="hedgehog" id="hedge2">
+    <img src="hedgehog.gif" class="hedgehog" id="hedge3">
+    <img src="hedgehog.gif" class="hedgehog" id="hedge4">
+    <img src="smiley.gif" class="smiley" id="smile1">
+    <img src="smiley.gif" class="smiley" id="smile2">
+    <img src="smiley.gif" class="smiley" id="smile3">
+    <img src="smiley.gif" class="smiley" id="smile4">
+    <img src="sun.gif" class="sun">
     <div class="confetti" id="conf1"></div>
     <div class="confetti" id="conf2"></div>
     <div class="confetti" id="conf3"></div>
