--- a/index.html
+++ b/index.html
@@ -31,48 +31,100 @@ html
         h1 {
             font-family: Arial, sans-serif;
             font-size: 36px;
-            color: #ffffff;
-            text-shadow: 2px 2px 8px #ff00ff, -2px -2px 8px #00ffff;
             margin: 0;
+            display: inline-block;
         }
+        .letter {
+            display: inline-block;
+            text-shadow: 2px 2px 8px #ff00ff, -2px -2px 8px #00ffff;
+        }
+        /* Letter-specific animations */
+        .letter:nth-child(5n+1) { animation: colorFlash1 1s infinite, wave 1.5s infinite; }
+        .letter:nth-child(5n+2) { animation: colorFlash2 1.2s infinite, wave 1.5s infinite 0.1s; }
+        .letter:nth-child(5n+3) { animation: colorFlash3 1.4s infinite, wave 1.5s infinite 0.2s; }
+        .letter:nth-child(5n+4) { animation: colorFlash4 1.6s infinite, wave 1.5s infinite 0.3s; }
+        .letter:nth-child(5n)   { animation: colorFlash5 1.8s infinite, wave 1.5s infinite 0.4s; }
+        @keyframes colorFlash1 {
+            0% { color: #ff0000; }
+            33% { color: #00ff00; }
+            66% { color: #0000ff; }
+            100% { color: #ff0000; }
+        }
+        @keyframes colorFlash2 {
+            0% { color: #00ffff; }
+            33% { color: #ff00ff; }
+            66% { color: #ffff00; }
+            100% { color: #00ffff; }
+        }
+        @keyframes colorFlash3 {
+            0% { color: #ff9900; }
+            33% { color: #00ff00; }
+            66% { color: #ff00ff; }
+            100% { color: #ff9900; }
+        }
+        @keyframes colorFlash4 {
+            0% { color: #0000ff; }
+            33% { color: #ffff00; }
+            66% { color: #ff0000; }
+            100% { color: #0000ff; }
+        }
+        @keyframes colorFlash5 {
+            0% { color: #ff00ff; }
+            33% { color: #00ffff; }
+            66% { color: #00ff00; }
+            100% { color: #ff00ff; }
+        }
+        @keyframes wave {
+            0%, 100% { transform: translateY(0); }
+            50% { transform: translateY(-10px); }
+        }
+        /* Bouncing Hedgehogs */
         .hedgehog {
             position: absolute;
             width: 100px;
-            animation: spin 4s linear infinite;
+            animation: bounce 6s linear infinite;
             z-index: 1;
         }
-        #hedge1 { top: 10%; left: 10%; }
-        #hedge2 { top: 10%; right: 10%; }
-        #hedge3 { bottom: 10%; left: 10%; }
-        #hedge4 { bottom: 10%; right: 10%; }
-        @keyframes spin {
-            100% { transform: rotate(360deg); }
+        #hedge1 { animation-delay: 0s; }
+        #hedge2 { animation-delay: 1.5s; }
+        #hedge3 { animation-delay: 3s; }
+        #hedge4 { animation-delay: 4.5s; }
+        @keyframes bounce {
+            0%   { top: 0%; left: 0%; }
+            25%  { top: 0%; left: calc(100% - 100px); }
+            50%  { top: calc(100% - 100px); left: calc(100% - 100px); }
+            75%  { top: calc(100% - 100px); left: 0%; }
+            100% { top: 0%; left: 0%; }
         }
+        /* Scaling Smileys */
         .smiley {
             position: absolute;
             width: 80px;
-            animation: flash 1s infinite;
             z-index: 1;
         }
-        #smile1 { top: 20%; left: 25%; }
-        #smile2 { top: 20%; right: 25%; }
-        #smile3 { bottom: 20%; left: 25%; }
-        #smile4 { bottom: 20%; right: 25%; }
-        @keyframes flash {
-            50% { opacity: 0; }
-        }
+        #smile1 { top: 20%; left: 25%; animation: scale1 2s infinite; }
+        #smile2 { top: 20%; right: 25%; animation: scale2 3s infinite; }
+        #smile3 { bottom: 20%; left: 25%; animation: scale3 2.5s infinite; }
+        #smile4 { bottom: 20%; right: 25%; animation: scale4 3.5s infinite; }
+        @keyframes scale1 { 0%, 100% { transform: scale(1); } 50% { transform: scale(1.5); } }
+        @keyframes scale2 { 0%, 100% { transform: scale(1); } 50% { transform: scale(1.8); } }
+        @keyframes scale3 { 0%, 100% { transform: scale(1); } 50% { transform: scale(1.3); } }
+        @keyframes scale4 { 0%, 100% { transform: scale(1); } 50% { transform: scale(1.6); } }
+        /* Patrolling Sun */
         .sun {
             position: absolute;
-            top: 10px;
-            right: 10px;
             width: 100px;
-            animation: shine 2s infinite;
+            animation: patrol 8s linear infinite;
             z-index: 1;
         }
-        @keyframes shine {
-            0%, 100% { transform: scale(1); opacity: 1; }
-            50% { transform: scale(1.1); opacity: 0.8; }
+        @keyframes patrol {
+            0%   { top: 0%; left: 0%; }
+            25%  { top: 0%; left: calc(100% - 100px); }
+            50%  { top: calc(100% - 100px); left: calc(100% - 100px); }
+            75%  { top: calc(100% - 100px); left: 0%; }
+            100% { top: 0%; left: 0%; }
         }
+        /* Bursting Confetti */
         .confetti {
             position: absolute;
             width: 10px;
@@ -102,7 +154,49 @@ html
 </head>
 <body>
     <div class="container">
-        <h1>HELLO CHRIS, THANKS FOR GIVING ME THE TASK.<br>THIS IS MY FIRST WESITE USING GIT HUB!<br>AND THANK YOU TO GROK TOO!!!</h1>
+        <h1>
+            <span class="letter">H</span><span class="letter">E</span><span class="letter">L</span><span class="letter">L</span><span class="letter">O</span>
+            <span class="letter"> </span>
+            <span class="letter">C</span><span class="letter">H</span><span class="letter">R</span><span class="letter">I</span><span class="letter">S</span><span class="letter">,</span>
+            <span class="letter"> </span>
+            <span class="letter">T</span><span class="letter">H</span><span class="letter">A</span><span class="letter">N</span><span class="letter">K</span><span class="letter">S</span>
+            <span class="letter"> </span>
+            <span class="letter">F</span><span class="letter">O</span><span class="letter">R</span>
+            <span class="letter"> </span>
+            <span class="letter">G</span><span class="letter">I</span><span class="letter">V</span><span class="letter">I</span><span class="letter">N</span><span class="letter">G</span>
+            <span class="letter"> </span>
+            <span class="letter">M</span><span class="letter">E</span>
+            <span class="letter"> </span>
+            <span class="letter">T</span><span class="letter">H</span><span class="letter">E</span>
+            <span class="letter"> </span>
+            <span class="letter">T</span><span class="letter">A</span><span class="letter">S</span><span class="letter">K</span><span class="letter">.</span><br>
+            <span class="letter">T</span><span class="letter">H</span><span class="letter">I</span><span class="letter">S</span>
+            <span class="letter"> </span>
+            <span class="letter">I</span><span class="letter">S</span>
+            <span class="letter"> </span>
+            <span class="letter">M</span><span class="letter">Y</span>
+            <span class="letter"> </span>
+            <span class="letter">F</span><span class="letter">I</span><span class="letter">R</span><span class="letter">S</span><span class="letter">T</span>
+            <span class="letter"> </span>
+            <span class="letter">W</span><span class="letter">E</span><span class="letter">S</span><span class="letter">I</span><span class="letter">T</span><span class="letter">E</span>
+            <span class="letter"> </span>
+            <span class="letter">U</span><span class="letter">S</span><span class="letter">I</span><span class="letter">N</span><span class="letter">G</span>
+            <span class="letter"> </span>
+            <span class="letter">G</span><span class="letter">I</span><span class="letter">T</span>
+            <span class="letter"> </span>
+            <span class="letter">H</span><span class="letter">U</span><span class="letter">B</span><span class="letter">!</span><br>
+            <span class="letter">A</span><span class="letter">N</span><span class="letter">D</span>
+            <span class="letter"> </span>
+            <span class="letter">T</span><span class="letter">H</span><span class="letter">A</span><span class="letter">N</span><span class="letter">K</span>
+            <span class="letter"> </span>
+            <span class="letter">Y</span><span class="letter">O</span><span class="letter">U</span>
+            <span class="letter"> </span>
+            <span class="letter">T</span><span class="letter">O</span>
+            <span class="letter"> </span>
+            <span class="letter">G</span><span class="letter">R</span><span class="letter">O</span><span class="letter">K</span>
+            <span class="letter"> </span>
+            <span class="letter">T</span><span class="letter">O</span><span class="letter">O</span><span class="letter">!</span><span class="letter">!</span><span class="letter">!</span>
+        </h1>
     </div>
     <img src="hedgehog.gif" class="hedgehog" id="hedge1">
     <img src="hedgehog.gif" class="hedgehog" id="hedge2">
